Fix nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,11 @@ nav {
     max-width: 100vw;
 }
 
+nav img {
+    max-width: none;
+    max-height: none;
+}
+
 nav ul {
     background-color: var(--bg-color);
     border: 2px solid var(--text-color);
